# mitm-client

./: .editorconfig  .gitignore  README.md  config.json  config.json5  main.py  pyproject.toml
.clinerules/: project-overview.md
mitm_client/: config.py
mitm_client/addons/: __init__.py  recorder.py  server_side_replay.py
mitm_client/app/: deduplicate_flows.py  logging_config.py  proxy_runner.py  ui.py
mitm_client/i18n/: __init__.py  en.py  zh.py
